# Sketch-It

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  cmake_install.cmake  sketch_it
includes/: fileManager.h  userConfig.h
layouts/: SetUp.cpp  SetUp.h
lib/: config.cpp  config.h  filemanager.h  gl.cpp
src/: SketchIt.cpp  SketchIt.h  fileManager.cpp  main.cpp  userConfig.cpp
src/Files/: Config.cpp  Config.h  Files.cpp  Files.h  UserData.cpp  UserData.h
src/Monitor/: Monitor.cpp  Monitor.h
src/Renderer/: Canvas.cpp  Canvas.h
src/SketchIt/: SketchIt.cpp  SketchIt.h  SketchItWindow.cpp  SketchItWindow.h
src/Styles/: Styles.cpp  Styles.h
src/Styles/styleSheets/: global.css  globalDark.css
src/UI/: Components.cpp  Components.h  Layouts.cpp  Layouts.h  Themes.cpp  UI.cpp  UI.h  UIUtils.cpp  UIUtils.h  Widgets.cpp  Widgets.h
src/UI/Components/: ErrorModal.cpp  ErrorModal.h  ToolProperty.cpp  ToolProperty.h
src/UI/Widgets/: SketchItWidget.h
src/layouts/: Layouts.cpp  Layouts.h
src/layouts/newUser/: newUser.cpp  newUser.h  userConf.cpp  (+1 more)
src/lib/: ToolBuilder.cpp  ToolBuilder.h  Tools.cpp  Tools.h  config.cpp  config.h  gl.cpp  gl.h
src/styles/: global.css
src/widgets/: ErrorModal.cpp  SketchItWidget.cpp  SketchItWidget.h
styles/: global.css
widgets/: Box.cpp  Box.h  Btn.cpp  Btn.h  C_Button.cpp  C_Button.h  CustomBox.cpp  CustomBox.h  CustomWindow.cpp  CustomWindow.h  ErrorModal.cpp  ErrorModal.h  MenuBar.cpp  MenuBar.h  MessageDialog.cpp  MessageDialog.h  Text.cpp  Text.h  Win.cpp  Win.h
(+21 files in other folders)
